fix(components): fix toast z-index
bugfix/toast

--- a/src/scss/components/_toast.scss
+++ b/src/scss/components/_toast.scss
@@ -5,7 +5,7 @@
   position: fixed;
   width: 100%;
   bottom: 20px;
-  z-index: 100;
+  z-index: 1000;
   margin: 0 10px 10px 5px;
 
   .bp-toast {
